Fix word-wrapping long links in docs

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -63,6 +63,10 @@ body::before {
   }
 }
 
+.markdown-section p {
+  overflow-wrap: break-word;
+}
+
 .loading {
   margin: 150px auto 0;
   position: relative;
